--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -3,4 +3,13 @@
 
 <h3 class="cyan-text lighten-2e darken-4 center-align">Tasks</h3>
 
+
+<div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_task') }}" class="btn-large cyan lighten-2e darken-2">
+            Add Task <i class="material-icons">add_circle</i>
+        </a>
+    </div>
+</div>
+
 {% endblock %}
